<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_acc"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_newclub"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_newclub" />
        <item
            android:id="@+id/nav_allclubs"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_allclubs" />
        <item
            android:id="@+id/nav_myclubs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_myclubs" />
    </group>

</menu>
